frontend/src/components/Recommended.module.css
/*--------Mobile-----------*/

.container {
  background-color: var(--colorDarkBG);
}
.rec {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--colorDarkBG);
  padding: 0 1.5rem;
}

.recQuote {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.imgContainer {
  position: relative;
  margin: 1.5rem 0;
}

.quotation {
  position: absolute;
  top: 40px;
  left: 70px;
  font-family: "Montserrat", sans-serif;
  font-size: 88px;
  color: var(--colorLightblue);
  font-weight: 700;
}

.imgQuote {
  border-radius: 50%;
  aspect-ratio: 1/1;
  object-fit: cover;
  width: 100px;
  height: 100px;
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
}

.nameMobile {
  color: var(--colorWhiteFonts);
  font-weight: 700;
  font-size: 1rem;
}
.nameDesktop {
  display: none;
}

.pText {
  color: var(--colorWhiteFonts);
  text-align: center;
  margin-bottom: 1rem;
}

.sectionHeadline {
  color: var(--colorWhiteFonts);
  text-align: center;
  padding-bottom: 0.5rem;
  padding-top: 2rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

.artistMobile {
  color: var(--colorWhiteFonts);
  font-weight: 700;
}

.song {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.btn {
  background: var(--gradientButtons);
  border: none;
  width: 119px;
  height: 42px;
  border-radius: 20px;
  cursor: pointer;
  box-shadow: 0px, 4px rgba(0, 0, 0, 0.25);
  margin-top: 2.5rem;
  margin-bottom: 3rem;
}

audio {
  height: 40px;
  margin-top: 3rem;
  margin-bottom: 0.5rem;
}

.songTitleMobile {
  color: var(--colorWhiteFonts);
  text-align: center;
}

.logo {
  width: 80px;
  height: 25px;
  object-fit: contain;
  margin-top: 0.25rem;
}
.songHeadline {
  display: none;
}

.songTitle {
  display: none;
}

.artistHeadline {
  display: none;
}

.artistTitle {
  display: none;
}

/*--------Transitionary Styling Mobile-> Tablet/Dekstop-----------*/

@media screen and (min-width: 500px) {
  .rec {
    padding: 0 3rem;
  }
  .nameMobile {
    font-size: 1.125rem;
  }
}

/*--------Tablet/Dekstop-----------*/
@media screen and (min-width: 850px) {
  .nameDesktop {
    display: block;
    color: var(--colorWhiteFonts);
    font-weight: 700;
    margin-right: 40px;
  }
  .artistMobile {
    display: none;
  }
  .nameMobile {
    display: none;
  }

  .songTitleMobile {
    display: none;
  }
  .recQuote {
    flex-direction: column-reverse;
  }
  .rec {
    flex-direction: row-reverse;
    justify-content: space-between;
    align-items: flex-start;
    gap: 0 calc(5px + 10%);
    max-width: 1300px;
    padding-left: 3rem;
  }

  .sectionHeadline {
    text-align: left;
    padding-left: 3rem;
    padding-bottom: 3rem;
  }
  .pText {
    text-align: left;
  }

  .recQuote {
    margin-right: 3rem;
    align-items: flex-end;
  }
  .profileQuote {
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    align-items: center;
  }

  .song {
    align-items: flex-start;
    justify-content: center;
  }
  .songHeadline {
    font-size: 1.5rem;
    font-family: var(--fontPoppins);
    color: var(--colorWhiteFonts);
    font-weight: 700;
    display: block;
  }
  .artistHeadline {
    font-size: 1.5rem;
    font-family: var(--fontPoppins);
    color: var(--colorWhiteFonts);
    font-weight: 700;
    display: block;
  }
  .songTitle {
    display: block;
    color: var(--colorWhiteFonts);
    margin-bottom: 1.5rem;
  }
  .artistTitle {
    display: block;
    color: var(--colorWhiteFonts);
  }
}

